# ferrumdb

./: .gitignore  Cargo.toml  README.md
crates/ferrumdb-btree/: Cargo.toml
crates/ferrumdb-btree/src/: lib.rs
crates/ferrumdb-buffer/: Cargo.toml
crates/ferrumdb-buffer/src/: lib.rs
crates/ferrumdb-engine/: Cargo.toml
crates/ferrumdb-engine/src/: engine.rs  lib.rs
crates/ferrumdb-page/: Cargo.toml
crates/ferrumdb-page/src/: error.rs  lib.rs  page.rs  row.rs
crates/ferrumdb-protocol/: Cargo.toml
crates/ferrumdb-protocol/src/: lib.rs
crates/ferrumdb-server/: Cargo.toml
crates/ferrumdb-server/src/: main.rs
crates/ferrumdb-space/: Cargo.toml
crates/ferrumdb-space/src/: lib.rs
crates/ferrumdb-sql/: Cargo.toml
crates/ferrumdb-sql/src/: lib.rs
crates/ferrumdb-txn/: Cargo.toml
crates/ferrumdb-txn/src/: lib.rs
crates/ferrumdb-wal/: Cargo.toml
crates/ferrumdb-wal/src/: lib.rs
docs/: architecture.md  collaboration.md  dependencies.md  plan.md
