[package]
name = "ferrumdb-btree"
description = "B+Tree index for FerrumDB"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ferrumdb-page = { path = "../ferrumdb-page" }
ferrumdb-space = { path = "../ferrumdb-space" }
ferrumdb-buffer = { path = "../ferrumdb-buffer" }
thiserror.workspace = true

[dev-dependencies]
tempfile = { workspace = true }
