[package]
name = "ferrumdb-buffer"
description = "Buffer pool for FerrumDB"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ferrumdb-page = { path = "../ferrumdb-page" }
ferrumdb-space = { path = "../ferrumdb-space" }
thiserror.workspace = true

[dev-dependencies]
tempfile = { workspace = true }
