[package]
name = "ferrumdb-wal"
description = "Redo log and crash recovery for FerrumDB"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ferrumdb-page = { path = "../ferrumdb-page" }
ferrumdb-space = { path = "../ferrumdb-space" }
thiserror.workspace = true
